--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.14'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
 
